tests/snapshots/insta_test__struct_declaration2-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                StructOrUnion(
                                                    WithList(
                                                        Some(
                                                            "my_struct_tag",
                                                        ),
                                                        [
                                                            StructDeclaration {
                                                                debug_info: DebugInfo {
                                                                    file_info: ,
                                                                    pos: Position {
                                                                        n_char: 4,
                                                                        n_line: 2,
                                                                    },
                                                                },
                                                                ty_spec: [
                                                                    Char,
                                                                ],
                                                                declarator: Declarator {
                                                                    n_star: 0,
                                                                    direct_declarator: Ident(
                                                                        "a",
                                                                    ),
                                                                },
                                                            },
                                                            StructDeclaration {
                                                                debug_info: DebugInfo {
                                                                    file_info: ,
                                                                    pos: Position {
                                                                        n_char: 4,
                                                                        n_line: 3,
                                                                    },
                                                                },
                                                                ty_spec: [
                                                                    Int,
                                                                ],
                                                                declarator: Declarator {
                                                                    n_star: 0,
                                                                    direct_declarator: Ident(
                                                                        "b",
                                                                    ),
                                                                },
                                                            },
                                                            StructDeclaration {
                                                                debug_info: DebugInfo {
                                                                    file_info: ,
                                                                    pos: Position {
                                                                        n_char: 4,
                                                                        n_line: 4,
                                                                    },
                                                                },
                                                                ty_spec: [
                                                                    Char,
                                                                ],
                                                                declarator: Declarator {
                                                                    n_star: 0,
                                                                    direct_declarator: Ident(
                                                                        "c",
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                    ),
                                                ),
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "mine",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: ,
                                            pos: Position {
                                                n_char: 2,
                                                n_line: 1,
                                            },
                                        },
                                    },
                                ),
                                debug_info: DebugInfo {
                                    file_info: ,
                                    pos: Position {
                                        n_char: 2,
                                        n_line: 1,
                                    },
                                },
                            },
                            Stmt {
                                kind: Return(
                                    Some(
                                        Expr {
                                            kind: SizeOf(
                                                Expr(
                                                    Expr {
                                                        kind: Ident(
                                                            "mine",
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: ,
                                                            pos: Position {
                                                                n_char: 16,
                                                                n_line: 6,
                                                            },
                                                        },
                                                    },
                                                ),
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: ,
                                                pos: Position {
                                                    n_char: 9,
                                                    n_line: 6,
                                                },
                                            },
                                        },
                                    ),
                                ),
                                debug_info: DebugInfo {
                                    file_info: ,
                                    pos: Position {
                                        n_char: 9,
                                        n_line: 6,
                                    },
                                },
                            },
                        ],
                    ),
                    debug_info: DebugInfo {
                        file_info: ,
                        pos: Position {
                            n_char: 0,
                            n_line: 0,
                        },
                    },
                },
            ),
            debug_info: DebugInfo {
                file_info: ,
                pos: Position {
                    n_char: 0,
                    n_line: 0,
                },
            },
        },
    ],
}
