tests/snapshots/insta_test__struct_declaration2-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Block(
                            [],
                        ),
                        Return(
                            Some(
                                ConvExpr {
                                    kind: Num(
                                        12,
                                    ),
                                    ty: Base(
                                        Int,
                                    ),
                                    debug_info: DebugInfo {
                                        file_info: ,
                                        pos: Position {
                                            n_char: 9,
                                            n_line: 6,
                                        },
                                    },
                                },
                            ),
                            "main",
                        ),
                    ],
                ),
                stack_size: 12,
            },
        ),
    ],
}
