tests/snapshots/insta_test__struct_declaration2.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 0,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 4,
                n_line: 0,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 8,
                n_line: 0,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 9,
                n_line: 0,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 0,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Struct,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 4,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "my_struct_tag",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 11,
                n_line: 2,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 4,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 8,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 13,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 14,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 8,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 12,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 13,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 8,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Ident(
            "c",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 13,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 14,
                n_line: 6,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 4,
                n_line: 7,
            },
        },
    },
    Token {
        kind: Ident(
            "mine",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 6,
                n_line: 7,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 10,
                n_line: 7,
            },
        },
    },
    Token {
        kind: Return,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 4,
                n_line: 8,
            },
        },
    },
    Token {
        kind: SizeOf,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 11,
                n_line: 8,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 17,
                n_line: 8,
            },
        },
    },
    Token {
        kind: Ident(
            "mine",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 18,
                n_line: 8,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 22,
                n_line: 8,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 23,
                n_line: 8,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 0,
                n_line: 9,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "",
                src: "int main()\n{\n    struct my_struct_tag\n    {\n        char a;\n        int b;\n        char c;\n    } mine;\n    return sizeof(mine); // -> 12\n}",
            },
            pos: Position {
                n_char: 1,
                n_line: 9,
            },
        },
    },
]
